discussion/kv_engine/183329/183329_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Add QuotaSharingItemPager

Added a new subclass of ItemPager which evicts items from a set of
buckets and stops eviction when sum(mem_used) < sum(low_wat).

Changed the ItemPager factory method to return an instance of the
QuotaSharingItemPager which is shared between quota sharing
configurations.

The QuotaSharingItemPager's schedulePagingVisitors implementation uses
the CrossBucketVisitorAdapter to schedule paging visitors for all
buckets sharing HT quotas.

The adapter round-robins which bucket's paging visitor gets to run.
This is done to avoid evicting more items from buckets which have more
items resident below the MFU eviction threshold (HTs more densely
populated with such items, which would be faster to evict from if we
were just running the visitors concurrently without syncronisation).

Change-Id: I5c285db14e438cf159cde181de91b838549b706a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-12-06 15:53:22.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-06 16:18:55.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22108/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:273:46: error: no member named "accumulate" in namespace "std" [clang-diagnostic-error]
    std::size_t estimatedTotalMemUsed = std::accumulate(
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.h:38:39: warning: "virtual" is redundant since the function is already declared "override" [modernize-use-override]
    virtual std::chrono::microseconds maxExpectedDuration() const override;
    ~~~~~~~~                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.h:46:28: warning: "virtual" is redundant since the function is already declared "override" [modernize-use-override]
    virtual EvictionRatios getEvictionRatios(
    ~~~~~~~~               ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22108/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:273:46:
error: no member named "accumulate" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22108/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51397/ : FAILURE

Failure of GoogleTest "MeteringTest/MeteringTest.SubdocArrayAddUniqueENotArray/UnmeteredByPrivilege":

<pre>
[ RUN      ] MeteringTest/MeteringTest.SubdocArrayAddUniqueENotArray/UnmeteredByPrivilege
[warn] event_base_new_with_config: Unable to make base notifiable.
[warn] event_base_free_: no base to free
unknown file: error: C++ exception with description "Failed to create pipe for AtomicNotificationQueue9: bad file descriptor" thrown in SetUp().
[  FAILED  ] MeteringTest/MeteringTest.SubdocArrayAddUniqueENotArray/UnmeteredByPrivilege, where GetParam() = 4-byte object <01-00 00-00> (6 ms)
MeteringTest/MeteringTest.SubdocArrayAddUniqueENotArray/UnmeteredByPrivilege
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51397/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43150/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:273:46:
error: no member named "accumulate" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43150/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11824/ : FAILURE

Compile error at [2022-12-06T15:55:19.290Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:273:46:
error: no member named "accumulate" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11824/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21667/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/861/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24560/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24146/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25414/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32565/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23642/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11914/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
